@@ -4,6 +4,7 @@ Products.CMFCore Changelog
 2.2.4 (unreleased)
 ------------------
 
+- Fix content exportimport when Title or Description are unicode.
 
 2.2.3 (2010-10-31)
 ------------------
